# galleria

./: .gitignore  Cargo.toml  flake.nix
discord-bot/: Cargo.toml
discord-bot/migration/: Cargo.toml
discord-bot/migration/src/: m20220101_000001_create_table.rs
discord-bot/sql-entities/: Cargo.toml
discord-bot/sql-entities/src/entities/: galleries.rs  gallery_posts.rs  mod.rs
discord-bot/sql-migration/: Cargo.toml
discord-bot/sql-migration/src/: m20220101_000001_create_table.rs
discord-bot/src/: bot.rs  main.rs
frontend/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220710_122414_rename_channel_id.rs  m20220710_125055_discord_ids_unique_indecies.rs
sql-entities/src/: lib.rs
sql-entities/src/entities/: galleries.rs  gallery.rs  gallery_post.rs  gallery_posts.rs  mod.rs  prelude.rs
src/: bot.rs  main.rs  web.rs
static/: galleria.css  index.mjs
