[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.2", default-features = false, features = ["builder", "client", "chrono", "gateway", "http", "model", "rustls_backend"] }
tokio = { version = "1.19.2", features = ["full"] }