[workspace]
members = [".", "sql-entities", "sql-migration"]

[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sql-entities = { path = "./sql-entities" }

[dependencies.serenity]
version = "0.11.2"
default-features = false
features = ["builder", "client", "chrono", "gateway", "http", "model", "rustls_backend"]

[dependencies.tokio]
version = "1.19.2"
features = ["full"]

[dependencies.sea-orm]
version = "^0"
features = ["sqlx-postgres", "runtime-tokio-rustls"]