[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
sql-entities = { path = "../sql-entities" }

[dependencies.tokio]
version = "1.19.2"
features = ["rt", "net", "macros"]

[dependencies.sea-orm-migration]
version = "^0.8.0"
features = ["sqlx-postgres", "runtime-tokio-rustls"]